// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features can be parsed and aliased: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "DataType",
          "children": [],
          "declaredName": "Integer",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Feature",
          "children": [],
          "declaredName": "person",
          "heritage": [
            {
              "$type": "FeatureTyping",
              "elements": [],
              "reference": {
                "$type": "TypeReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Classifier",
                      "children": [
                        {
                          "$type": "FeatureMembership",
                          "element": {
                            "$type": "Feature",
                            "children": [],
                            "declaredName": "age",
                            "heritage": [
                              {
                                "$type": "FeatureTyping",
                                "elements": [],
                                "reference": {
                                  "$type": "TypeReference",
                                  "parts": [
                                    {
                                      "error": undefined,
                                      "ref": {
                                        "$type": "DataType",
                                        "children": [],
                                        "declaredName": "Integer",
                                        "heritage": [],
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                    },
                                  ],
                                },
                              },
                            ],
                            "isNonunique": false,
                            "isOrdered": false,
                            "isSufficient": false,
                            "multiplicity": {
                              "$type": "OwningMembership",
                              "element": {
                                "$type": "MultiplicityRange",
                                "children": [],
                                "heritage": [],
                                "isNonunique": false,
                                "isOrdered": false,
                                "isSufficient": false,
                                "prefixes": [],
                                "range": {
                                  "$type": "OwningMembership",
                                  "element": {
                                    "$type": "LiteralNumber",
                                    "children": [],
                                    "heritage": [],
                                    "isNonunique": false,
                                    "isOrdered": false,
                                    "isSufficient": false,
                                    "literal": 1,
                                    "prefixes": [],
                                    "typeRelationships": [],
                                  },
                                  "elements": [],
                                },
                                "typeRelationships": [],
                              },
                              "elements": [],
                            },
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                          "elements": [],
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "personAlias",
                          "elements": [],
                          "reference": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": [Circular],
                              },
                            ],
                          },
                        },
                      ],
                      "declaredName": "Person",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
          "isNonunique": false,
          "isOrdered": false,
          "isSufficient": false,
          "multiplicity": {
            "$type": "OwningMembership",
            "element": {
              "$type": "MultiplicityRange",
              "children": [],
              "heritage": [],
              "isNonunique": false,
              "isOrdered": false,
              "isSufficient": false,
              "prefixes": [],
              "range": {
                "$type": "OwningMembership",
                "element": {
                  "$type": "LiteralInfinity",
                  "children": [],
                  "heritage": [],
                  "isNonunique": false,
                  "isOrdered": false,
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
                "elements": [],
              },
              "typeRelationships": [],
            },
            "elements": [],
          },
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Classifier",
          "children": [
            {
              "$type": "FeatureMembership",
              "element": {
                "$type": "Feature",
                "children": [],
                "declaredName": "age",
                "heritage": [
                  {
                    "$type": "FeatureTyping",
                    "elements": [],
                    "reference": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "DataType",
                            "children": [],
                            "declaredName": "Integer",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "multiplicity": {
                  "$type": "OwningMembership",
                  "element": {
                    "$type": "MultiplicityRange",
                    "children": [],
                    "heritage": [],
                    "isNonunique": false,
                    "isOrdered": false,
                    "isSufficient": false,
                    "prefixes": [],
                    "range": {
                      "$type": "OwningMembership",
                      "element": {
                        "$type": "LiteralNumber",
                        "children": [],
                        "heritage": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "literal": 1,
                        "prefixes": [],
                        "typeRelationships": [],
                      },
                      "elements": [],
                    },
                    "typeRelationships": [],
                  },
                  "elements": [],
                },
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "Membership",
              "declaredName": "personAlias",
              "elements": [],
              "reference": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Feature",
                      "children": [],
                      "declaredName": "person",
                      "heritage": [
                        {
                          "$type": "FeatureTyping",
                          "elements": [],
                          "reference": {
                            "$type": "TypeReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": [Circular],
                              },
                            ],
                          },
                        },
                      ],
                      "isNonunique": false,
                      "isOrdered": false,
                      "isSufficient": false,
                      "multiplicity": {
                        "$type": "OwningMembership",
                        "element": {
                          "$type": "MultiplicityRange",
                          "children": [],
                          "heritage": [],
                          "isNonunique": false,
                          "isOrdered": false,
                          "isSufficient": false,
                          "prefixes": [],
                          "range": {
                            "$type": "OwningMembership",
                            "element": {
                              "$type": "LiteralInfinity",
                              "children": [],
                              "heritage": [],
                              "isNonunique": false,
                              "isOrdered": false,
                              "isSufficient": false,
                              "prefixes": [],
                              "typeRelationships": [],
                            },
                            "elements": [],
                          },
                          "typeRelationships": [],
                        },
                        "elements": [],
                      },
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
          "declaredName": "Person",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`member features can be parsed: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Classifier",
          "children": [],
          "declaredName": "A",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Classifier",
          "children": [
            {
              "$type": "FeatureMembership",
              "element": {
                "$type": "Feature",
                "children": [],
                "declaredName": "f",
                "heritage": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Feature",
                "children": [],
                "declaredName": "g",
                "heritage": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [
                  {
                    "$type": "TypeFeaturing",
                    "elements": [],
                    "reference": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Classifier",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
              },
              "elements": [],
            },
          ],
          "declaredName": "B",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;
